reduce info width to prevent overlap

--- a/css/style-d3.css
+++ b/css/style-d3.css
@@ -181,7 +181,7 @@ button.down{
     padding-right:10px;
     /*padding-top:10px;*/
     display:inline-block;
-    max-width:62%;
+    max-width:50%;
 }
 .sketchlab.info.num{
     direction:ltr;
